Wed Dec 19 19:52:53 2001  George Lebl <jirka@5z.com>

	* gnome-desktop-item.c: actually make looking for kde icons work,
	  and don't check the kde stuff if we've already found a gnome one,
	  also ignore dot directories to avoid infinite loops and such.

Wed Dec 19 18:34:00 2001  George Lebl <jirka@5z.com>

	* gnome-desktop-item.c: s/G_DIR_SEPARATOR/G_DIR_SEPARATOR_S/,
	  LONG LIVE TYPE UNSAFETY!

Wed Dec 19 18:23:17 2001  George Lebl <jirka@5z.com>

	* gnome-desktop-item.[ch]: add a find_icon function which
	  doesn't work only on desktop items but no matter how you got the
	  icon name.  Also deal with sizes and only look in kde hicolor
	  dirs.

2001-12-16  Gediminas Paulauskas <menesis@delfi.lt>

	* gnome-desktop/gnome-ditem-edit.c: get translations from
	GETTEXT_PACKAGE domain and with UTF-8 codeset, so that translations
	work when library is used outside of gnome-core.

Fri Dec 14 16:43:23 2001  George Lebl <jirka@5z.com>

	* gnome-desktop-item.c: simplify and complete the %? substitution.
	  Now %f and friends behave in a more predictable way.  If there
	  are multiple instances on the command line you get the
	  same file.  This also fixes other corner cases and simplifies what
	  we do.  It's also more predictable, and makes more sense.  Things
	  may still be weird if you use both %u and %f on the same line,
	  but then you deserve what you get.

Fri Dec 14 15:58:06 2001  George Lebl <jirka@5z.com>

	* gnome-desktop-item.[ch], gnome-ditem-edit.[ch]: added some needed
	  API.  One for setting location as file, and setting a directory
	  only editor and setting initial type string.

Sun Dec 09 15:22:03 2001  George Lebl <jirka@5z.com>

	* gnome-desktop-item.c: actually set the real_argc for launching and
	  also actually add elements to the argv array

Sat Dec 08 11:27:35 2001  George Lebl <jirka@5z.com>

	* gnome-desktop-item.[ch]: Make launching standards compliant and
	  realize that the standard sucks donkeyballs.  It's utterly