@@ -1,3 +1,8 @@
+Thu Dec 20 15:43:21 2001  George Lebl <jirka@5z.com>
+
+	* gnome-desktop-item.c: use g_spawn and return some cool errors from
+	  g_spawn and g_shell on exec
+
 Wed Dec 19 19:52:53 2001  George Lebl <jirka@5z.com>
 
 	* gnome-desktop-item.c: actually make looking for kde icons work,
